v1.12.x/connectors/database/bigquery/yaml.mdx
---
title: Run the BigQuery Connector Externally
description: Configure BigQuery database connections in OpenMetadata using YAML. Complete setup guide with authentication, SSL, and connection parameters.
sidebarTitle: Run Externally
mode: "wide"
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import { CodePreview, ContentPanel, ContentSection, CodePanel } from '/snippets/components/CodePreview.jsx'
import AutoClassification from '/snippets/connectors/yaml/auto-classification.mdx'
import DataProfiler from '/snippets/v1.12.x/connectors/yaml/data-profiler.mdx'
import Lineage from '/snippets/connectors/yaml/lineage.mdx'
import QueryUsage from '/snippets/connectors/yaml/query-usage.mdx'
import PartitionedTables from '/snippets/connectors/database/partitioned-tables.mdx'
import GcpConfigDef from '/snippets/connectors/yaml/common/gcp-config-def.mdx'
import GcpConfig from '/snippets/connectors/yaml/common/gcp-config.mdx'
import IngestionSinkDef from '/snippets/connectors/yaml/ingestion-sink-def.mdx'
import WorkflowConfigDef from '/snippets/connectors/yaml/workflow-config-def.mdx'
import IngestionCli from '/snippets/connectors/yaml/ingestion-cli.mdx'
import PythonRequirements from '/snippets/connectors/python-requirements.mdx'
import ExternalIngestionDeployment from '/snippets/v1.12.x/connectors/external-ingestion-deployment.mdx'
import IngestionSink from '/snippets/connectors/yaml/ingestion-sink.mdx'
import WorkflowConfig from '/snippets/connectors/yaml/workflow-config.mdx'
import SourceConfigDef from '/snippets/connectors/yaml/database/source-config-def.mdx'
import SourceConfig from '/snippets/connectors/yaml/database/source-config.mdx'
import DataQuality from '/snippets/connectors/yaml/data-quality.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/bigquery.webp'
name="BigQuery"
stage="PROD"
availableFeatures={["Metadata", "Query Usage", "Lineage", "Column-level Lineage", "Data Profiler", "Data Quality", "dbt", "Tags", "Stored Procedures", "Sample Data", "Auto-Classification"]}
unavailableFeatures={["Owners"]} />
In this section, we provide guides and references to use the BigQuery connector.

<Info>
**Supported Authentication Types:**
- **GCP Credentials Values** — Direct service account key values (type, project ID, private key, client email, etc.)
- **GCP Credentials Path** — Path to a local service account key JSON file
- **GCP External Account** — Workload Identity Federation for non-GCP environments
- **GCP Application Default Credentials (ADC)** — Automatic credential discovery in GCP environments or via `gcloud auth application-default login`
</Info>

Configure and schedule BigQuery metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
    - [Incremental Extraction](/v1.12.x/connectors/ingestion/workflows/metadata/incremental-extraction/bigquery)
- [Query Usage](#query-usage)
- [Lineage](#lineage)
- [Data Profiler](#data-profiler)
- [Data Quality](#data-quality)
- [dbt Integration](#dbt-integration)

<ExternalIngestionDeployment />
## Requirements
### Python Requirements
<PythonRequirements />
To run the BigQuery ingestion, you will need to install:
```bash
pip3 install "openmetadata-ingestion[bigquery]"
```
### GCP Permissions
To execute metadata extraction and usage workflow successfully the user or the service account should have enough access to fetch required data. Following table describes the minimum required permissions
| #    | GCP Permission                | Required For            |
| :--- | :---------------------------- | :---------------------- |
| 1    | bigquery.datasets.get         | Metadata Ingestion      |
| 2    | bigquery.tables.get           | Metadata Ingestion      |
| 3    | bigquery.tables.getData       | Metadata Ingestion      |
| 4    | bigquery.tables.list          | Metadata Ingestion      |
| 5    | resourcemanager.projects.get  | Metadata Ingestion      |
| 6    | bigquery.jobs.create          | Metadata Ingestion      |
| 7    | bigquery.jobs.listAll         | Metadata Ingestion      |
| 8    | bigquery.routines.get         | Stored Procedure        |
| 9    | bigquery.routines.list        | Stored Procedure        |
| 10   | datacatalog.taxonomies.get    | Fetch Policy Tags       |
| 11   | datacatalog.taxonomies.list   | Fetch Policy Tags       |
| 12   | bigquery.readsessions.create  | Bigquery Usage & Lineage Workflow |
| 13   | bigquery.readsessions.getData | Bigquery Usage & Lineage Workflow |
| 14   | logging.operations.list       | Incremental Metadata Ingestion    |
<Tip>
If the user has `External Tables`, please attach relevant permissions needed for external tables, along with the above list of permissions.
</Tip>
<Columns cols={2}>
<Card title="Create Custom GCP Role" href="/v1.12.x/connectors/database/bigquery/create-credentials">
  Checkout this documentation on how to create a custom role and assign it to the service account.
</Card>
</Columns>
<PartitionedTables />
## Metadata Ingestion
### 1. Define the YAML Config

This is a sample config for BigQuery:

<CodePreview>

<ContentPanel>

<ContentSection id={1} title="Source Configuration" lines="1-3">

Configure the source type and service name for your BigQuery connector.

</ContentSection>

<ContentSection id={2} title="Connection Type" lines="6">

**type**: Set to `BigQuery` for BigQuery connections.

</ContentSection>

<ContentSection id={3} title="Host and Port" lines="7">

**hostPort**: BigQuery APIs URL. By default, the API URL is `bigquery.googleapis.com`. You can modify this if you have a custom implementation of BigQuery.

</ContentSection>

<ContentSection id={4} title="Billing Project ID" lines="8">

**billingProjectId** (Optional): The GCP project that should be charged for the BigQuery jobs OpenMetadata runs. Use this when the project that pays for metadata, usage, or lineage queries is different from the project ID or IDs you ingest from.

</ContentSection>

<ContentSection id={5} title="Credentials" lines="9-10">

**credentials**: You can authenticate with your BigQuery instance using either `GCP Credentials Path` where you can specify the file path of the service account key or you can pass the values directly by choosing the `GCP Credentials Values` from the service account key file.

You can checkout [this](https://cloud.google.com/iam/docs/keys-create-delete#iam-service-account-keys-create-console) documentation on how to create the service account keys and download it.

</ContentSection>

<ContentSection id={6} title="GCP Configuration" lines="10-23">

<div>

**gcpConfig:** You can authenticate using:

**1.** Passing the raw credential values provided by BigQuery:

<GcpConfigDef />

</div>

<div>

**2.** Passing a local file path that contains the credentials:
- **gcpCredentialsPath**: Path to the service account key file

If you prefer to pass the credentials file, you can do so as follows:
```yaml
credentials:
  gcpConfig:
    path: <path to file>
```

</div>

<div>

**3.** Using [ADC authentication](https://cloud.google.com/docs/authentication#adc):

You can use ADC authentication by leaving the GCP credentials empty:

```yaml
# ADC authentication with optional billing project
credentials:
  gcpConfig:
    type: gcp_adc
    projectId: ["your-data-project-id"]  # Optional
```

</div>

</ContentSection>

<ContentSection id={7} title="GCP Impersonate Service Account" lines="24-26">

**gcpImpersonateServiceAccount** (Optional): Enable the authenticated service account to impersonate another service account, instead of ingesting directly with the credentials above.
- **impersonateServiceAccount**: The email of the service account to impersonate.
- **lifetime**: Number of seconds the delegated credential should remain valid. Defaults to `3600`.

</ContentSection>

<ContentSection id={8} title="Include Policy Tags" lines="27">

**includePolicyTags** (Optional): Option to include policy tags as part of the column description. Enabled by default.

</ContentSection>

<ContentSection id={9} title="Taxonomy Configuration" lines="28-29">

<div>

**Taxonomy Project ID (Optional)**: BigQuery uses taxonomies to create hierarchical groups of policy tags. To apply access controls to BigQuery columns, tag the columns with policy tags. Learn more about how to create policy tags and set up column-level access control [here](https://cloud.google.com/bigquery/docs/column-level-security)

If you have attached policy tags to the columns of table available in BigQuery, then OpenMetadata will fetch those tags and attach it to the respective columns. In this field you need to specify the id of project in which the taxonomy was created.

</div>

<div>

**Taxonomy Location (Optional)**: In this field you need to specify the location/region in which the taxonomy was created.

</div>

</ContentSection>

<ContentSection id={10} title="Usage Location" lines="30">

**Usage Location (Optional)**: Location used to query `INFORMATION_SCHEMA.JOBS_BY_PROJECT` to fetch usage data. You can pass multi-regions, such as `us` or `eu`, or your specific region such as `us-east1`. Australia and Asia multi-regions are not yet supported.

</ContentSection>

<ContentSection id={11} title="Cost Per TiB" lines="31">

**Cost Per TiB (Optional)**: The cost (in USD) per tebibyte (TiB) of data processed during BigQuery usage analysis. This value is used to estimate query costs when analyzing usage metrics from `INFORMATION_SCHEMA.JOBS_BY_PROJECT`.

This setting does **not** affect actual billing—it is only used for internal reporting and visualization of estimated costs. The default value, if not set, may assume the standard on-demand BigQuery pricing (e.g., $5.00 per TiB), but you should adjust it according to your organization's negotiated rates or flat-rate pricing model.

</ContentSection>

<ContentSection id={12} title="Connection Options" lines="32-33">

**Connection Options (Optional)**: Enter the details for any additional connection options that can be sent to database during the connection. These details must be added as Key-Value pairs.

</ContentSection>

<ContentSection id={13} title="Connection Arguments" lines="34-35">

**Connection Arguments (Optional)**: Enter the details for any additional connection arguments such as security or protocol configs that can be sent to database during the connection. These details must be added as Key-Value pairs.

- In case you are using Single-Sign-On (SSO) for authentication, add the `authenticator` details in the Connection Arguments as a Key-Value pair as follows: `"authenticator" : "sso_login_url"`

</ContentSection>

<ContentSection id={14} title="Source Config" lines="36-79">

<SourceConfigDef />

</ContentSection>

<ContentSection id={15} title="Sink Configuration" lines="80-82">

<IngestionSinkDef />

</ContentSection>

<ContentSection id={16} title="Workflow Configuration" lines="83-99">

<WorkflowConfigDef />

</ContentSection>

</ContentPanel>

<CodePanel fileName="bigquery_config.yaml">

```yaml
source:
  type: bigquery
  serviceName: "<service name>"
  serviceConnection:
    config:
      type: BigQuery
      # hostPort: bigquery.googleapis.com
      # billingProjectId: project-id-1
      credentials:
        gcpConfig:
```

<GcpConfig />

```yaml
        # gcpImpersonateServiceAccount:
        #   impersonateServiceAccount: target-service-account@project.iam.gserviceaccount.com
        #   lifetime: 3600
      # includePolicyTags: true
      # taxonomyProjectID: ["project-id-1", "project-id-2"]
      # taxonomyLocation: us
      # usageLocation: us
      # costPerTB: 5.00
      # connectionOptions:
      #   key: value
      # connectionArguments:
      #   key: value
```

<SourceConfig />

<IngestionSink />

<WorkflowConfig />

</CodePanel>

</CodePreview>
<IngestionCli />
<QueryUsage connector="bigquery" />
<Lineage connector="bigquery" />
<DataProfiler connector="bigquery" />
<AutoClassification connector="bigquery" />
<DataQuality />
## dbt Integration
You can learn more about how to ingest dbt models' definitions and their lineage [here](/v1.12.x/connectors/database/dbt).
